--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       <ul class="nav navbar-nav">
         <li><a href="">Home</a></li>
         <li><a href="">Recommend</a></li>
-        <li><a href="">COntaca</a></li>
+        <li><a href="">Contact</a></li>
         
       </ul>
 
@@ -70,7 +70,7 @@
         </div>
 
       </div>
-    </div>
+    </div> 
 
 
 
